--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Your mom</title>
   </head>
   <body>
-    <a href="https://id.twitch.tv/oauth2/authorize?response_type=token&client_id=02im991evpic87q63afh291vm9i0sw&redirect_uri=https://lolspers.github.io/&scope=user%3Amanage%3Achat_color">Connect with Twitch</a>
+    <a href="https://id.twitch.tv/oauth2/authorize?response_type=token&client_id=02im991evpic87q63afh291vm9i0sw&redirect_uri=https://lolspers.github.io/&scope=user">Connect with Twitch</a>
 
 </html>
