--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Your mom</title>
   </head>
   <body>
-    <a href="https://id.twitch.tv/oauth2/authorize?response_type=token&client_id=02im991evpic87q63afh291vm9i0sw&redirect_uri=https://lolspers.github.io/&scope=user">Connect with Twitch</a>
+    <a href="https://id.twitch.tv/oauth2/authorize?response_type=token&client_id=02im991evpic87q63afh291vm9i0sw&redirect_uri=https://lolspers.github.io/&scope=analytics:read:extensions+analytics:read:games+bits:read+channel:edit:commercial+channel:manage:broadcast+channel:manage:extensions+channel:manage:polls+channel:manage:predictions+channel:manage:redemptions+channel:manage:schedule+channel:manage:videos+channel:read:editors+channel:read:goals+channel:read:hype_train+channel:read:polls+channel:read:predictions+channel:read:redemptions+channel:read:stream_key+channel:read:subscriptions+clips:edit+moderation:read+moderator:manage:announcements+moderator:manage:banned_users+moderator:manage:automod">Connect with Twitch</a>
 
 </html>
