--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <body>
-    <div class="buttons"> 
+    <div class="topbar"> 
       <div class="topbarButton">
         <p class="topbarButtonText">Home</p>
       </div>
