--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <body>
-    <div class="topbar"> 
+    <div class="buttons"> 
       <div class="topbarButton">
-        <p class="topbarButtonText">Home</p>
+        <p class="topbarButtonText" value="home">Home</p>
       </div>
       <div class="topbarButton">
-        <p class="topbarButtonText">Commands</p>
+        <p class="topbarButtonText" value="commands">Commands</p>
       </div>
       <div class="authButton">
         <p class="authButtonText">Does Not Work</p>
@@ -26,6 +26,10 @@
     <script>
       $(".authButton").click(function() {
         window.location.href = "https://id.twitch.tv/oauth2/authorize?response_type=token&client_id=02im991evpic87q63afh291vm9i0sw&redirect_uri=https://lolspers.github.io/&scope=bits:read+channel:read:editors+channel:read:hype_train+channel:manage:moderators+channel:read:polls+channel:manage:polls+channel:read:predictions+channel:manage:predictions+channel:manage:raids+channel:read:redemptions+channel:manage:redemptions+channel:manage:schedule+channel:read:subscriptions+channel:read:vips+channel:manage:vips+moderation:read+moderator:manage:announcements+moderator:read:automod_settings+moderator:manage:banned_users+moderator:read:blocked_terms+moderator:manage:blocked_terms+moderator:manage:chat_messages+moderator:read:chat_settings+moderator:read:chatters+moderator:manage:chat_settings+moderator:read:followers+moderator:read:shoutouts+moderator:manage:shoutouts+moderator:read:unban_requests+user:edit+user:read:blocked_users+user:read:broadcast+user:read:emotes+user:read:moderated_channels+user:read:follows+user:manage:whispers+channel:bot+channel:moderate+chat:edit+chat:read+user:bot+user:read:chat+user:write:chat+whispers:read+whispers:edit+user:manage:chat_color"
+      })
+      $(".topbarButton").click(function changePage(button) {
+        button = button.currentTarget
+        window.location.href = $(button).text().toLowerCase()
       })
     </script>
 </html>
