--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, clicn on this <a href="https://lolspers.github.io/home">link</a>.</p>
+    <p>If you are not redirected automatically, click on this <a href="https://lolspers.github.io/home">link</a>.</p>
 </body>
 </html>
