--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
-    <script type="text/javascript">
-        setTimeout(function() {
-            window.location.href = "home";
-        }, 0);
-    </script>
-</head>
-<body>
-    <p>If you are not redirected automatically, click on this <a href="https://lolspers.github.io/home">link</a>.</p>
-</body>
+<html>
+    <head>
+        <title>Redirecting...</title>
+        <link href="style.css" rel="stylesheet">
+        <script type="text/javascript">
+            setTimeout(function() {
+                window.location.href = "home";
+            }, 0);
+        </script>
+    </head>
+    <body>
+        <p>If you are not redirected automatically, clicn on this <a href="https://lolspers.github.io/home">link</a>.</p>
+    </body>
 </html>
