add all command menus

--- a/commands.html
+++ b/commands.html
@@ -71,50 +71,131 @@
         </div>
         <div class="commandMenu">
           <div class="minimizedCommandMenu">
-            <p class="minimizedCommandMenuResponseText"><a class="minimizedCommandMenuCommandText">7tvu</a> - lolspers: https://7tv.app/users/{uid} - editors: {editors} - roles: {roles}</p>
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">7tvset</a> - {set name}, id: {set id} - link: https://7tv.app/emote-sets/{set id} - {used slots}/{capacity} </p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;7tvset {username}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>5s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>1</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
-            <p class="minimizedCommandMenuResponseText">g</p>
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">7tvuser</a> - {username}: https://7tv.app/users/{uid} - editors: {editors} - roles: {roles}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;7tvu {username}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>5s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>1</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Alias: </a>7tvu</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">command add</a> - Added command: {command} / Command {command} already exists / No response given</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;command add {command name} {response}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>3</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliaseses: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">command edit</a> - Succesfully edited command {command} / Command {command} was not found / No response given</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;command edit {command name} {response}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>3</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">command delete</a> - Deleted command: {command} / Command {command} does not exist</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;command delete {command name}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>3</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">enable</a> - enabled {catagory}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;enable {catagory}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>commands: 3, response: 3, color cycle: 4</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">disable</a> - disabled {catagory}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;disable {catagory}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>commands: 3, response: 3, color cycle: 4</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">emotelink</a> - https://cdn.7tv.app/emote/{emote id}/{file type}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;emotelink {emote} [ {size} / {file type} / {size}.{file type} ]</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>1s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>1</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Alias: </a>el</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">epoch</a> - epoch: {epochTime} , CET: {date, time, year}, relative: {relativeTime}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;epoch {epoch time (in ms)}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>1</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">global</a> - Unique: {uniquely named badge amount}, with duplicates: {total badge amount} </p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;global</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>1</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">invisiblecharacter</a> - {invisible character}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;invisiblecharacter</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>1</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>ic, invischar, invisiblechar, invischaracter, invisiblecharacter</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">potatoinfo</a> - potato: {potato ready at}, steal: {steal ready at}, cdr: {cdr ready at}, quiz: {quiz ready at}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;poinfo {username}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>1</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Alias: </a>poinfo</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">time</a> - {date, time, timezone} </p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;time</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>1</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">usercard</a> - https://www.twitch.tv/popout/{channel}/viewercard/{username}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;usercard {username} {channel}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>1</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Alias: </a>uc</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
           <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">uid</a> - {uid}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;uid</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>0s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>1</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
+            <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
+          </div>
+          <div class="minimizedCommandMenu">
+            <p class="minimizedCommandResponse"><a class="minimizedCommandCommand">user</a> - api response (not done yet)</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Arguments: </a>;user {username}</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Cooldown: </a>1s</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">User Level: </a>1</p>
+            <p class="minimizedCommandValue"><a class="minimizedCommandKey">Aliases: </a>None</p>
             <img src="anglearrowdown.png" class="anglearrowdown" value="minimized">
           </div>
         </div>
@@ -122,10 +203,18 @@
 
     </body>
     <script>
-      $(".minimizedCommandMenu").click(function rotateAngleArrowDown(arrow) {
-        arrow = arrow.currentTarget
-        $(arrow).toggleClass("maximizedCommandMenu")
-        $(arrow).toggleClass("minimizedCommandMenu")
+      $(".minimizedCommandMenu").click(function openCommandMenu(clickedDiv) {
+        clickedDiv = clickedDiv.currentTarget
+        $(clickedDiv).toggleClass("maximizedCommandMenu")
+        $(clickedDiv).toggleClass("minimizedCommandMenu")
+        $(this).find("p").first().toggleClass("minimizedCommandResponse")
+        $(this).find("p").first().toggleClass("maximizedCommandResponse")
+        $(this).find("a").first().toggleClass("minimizedCommandCommand")
+        $(this).find("a").first().toggleClass("maximizedCommandCommand")
+        $(this).find("a").slice(1, 5).toggleClass("minimizedCommandKey")
+        $(this).find("a").slice(1, 5).toggleClass("maximizedCommandKey")
+        $(this).find("p").slice(1, 5).toggleClass("minimizedCommandValue")
+        $(this).find("p").slice(1, 5).toggleClass("maximizedCommandValue")
       })
 
       $(".authButton").click(function() {
