--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Iolbot</title>
@@ -5,6 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <body>
@@ -18,7 +22,9 @@
       <div class="authButton">
         <p class="authButtonText">Does Not Work</p>
       </div>
+      <img src="https://cdn.7tv.app/emote/645c29a0a93fbaf6fa2b5647/4x.avif" class="uuh">
     </div>
+
     <script>
       $(".authButton").click(function() {
         window.location.href = "https://id.twitch.tv/oauth2/authorize?response_type=token&client_id=02im991evpic87q63afh291vm9i0sw&redirect_uri=https://lolspers.github.io/&scope=bits:read+channel:read:editors+channel:read:hype_train+channel:manage:moderators+channel:read:polls+channel:manage:polls+channel:read:predictions+channel:manage:predictions+channel:manage:raids+channel:read:redemptions+channel:manage:redemptions+channel:manage:schedule+channel:read:subscriptions+channel:read:vips+channel:manage:vips+moderation:read+moderator:manage:announcements+moderator:read:automod_settings+moderator:manage:banned_users+moderator:read:blocked_terms+moderator:manage:blocked_terms+moderator:manage:chat_messages+moderator:read:chat_settings+moderator:read:chatters+moderator:manage:chat_settings+moderator:read:followers+moderator:read:shoutouts+moderator:manage:shoutouts+moderator:read:unban_requests+user:edit+user:read:blocked_users+user:read:broadcast+user:read:emotes+user:read:moderated_channels+user:read:follows+user:manage:whispers+channel:bot+channel:moderate+chat:edit+chat:read+user:bot+user:read:chat+user:write:chat+whispers:read+whispers:edit+user:manage:chat_color"
@@ -28,4 +34,5 @@
         window.location.href = $(button).text().toLowerCase()
       })
     </script>
+    </body>
 </html>
