--- a/home.html
+++ b/home.html
@@ -22,7 +22,10 @@
       <div class="authButton">
         <p class="authButtonText">Does Not Work</p>
       </div>
-      <img src="https://cdn.7tv.app/emote/645c29a0a93fbaf6fa2b5647/4x.avif" class="uuh">
+      <div class="guh">
+        <img src="https://cdn.7tv.app/emote/645c29a0a93fbaf6fa2b5647/4x.avif" class="uuh">
+      </div>
+
     </div>
 
     <script>
