--- a/lule.html
+++ b/lule.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>lule</title>
-    <link href="lule.css">
+    <link href="lule.css" rel="stylesheet">
   </head>
   <body>
     <img src="https://cdn.7tv.app/emote/6576321dd5aba58c2d4378ac/4x.avif">
