--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Redirecting...</title>
-        <link href="style.css" rel="stylesheet">
-        <script type="text/javascript">
-            setTimeout(function() {
-                window.location.href = "home";
-            }, 0);
-        </script>
-    </head>
-    <body>
-        <p>If you are not redirected automatically, clicn on this <a href="https://lolspers.github.io/home">link</a>.</p>
+  <head>
+    <title>Iolbot</title>
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  </head>
+  <body>
+    <div class="topbar"> 
+      <div class="topbarButton">
+        <p class="topbarButtonText" value="home">Home</p>
+      </div>
+      <div class="topbarButton">
+        <p class="topbarButtonText" value="commands">Commands</p>
+      </div>
+      <div class="authButton">
+        <p class="authButtonText">Does Not Work</p>
+      </div>
+      <div class="guh">
+        <img src="https://cdn.7tv.app/emote/645c29a0a93fbaf6fa2b5647/4x.avif" class="uuh">
+      </div>
+
+    </div>
+
+    <script>
+      $(".authButton").click(function() {
+        window.location.href = "lule"
+      })
+      $(".topbarButton").click(function changePage(button) {
+        button = button.currentTarget
+        window.location.href = $(button).text().toLowerCase()
+      })
+    </script>
     </body>
 </html>
