--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="guh">
         <img src="https://cdn.7tv.app/emote/645c29a0a93fbaf6fa2b5647/4x.avif" class="uuh">
       </div>
+      <div></div>
 
     </div>
 
