--- a/commands.html
+++ b/commands.html
@@ -221,8 +221,12 @@
         window.location.href = "lule"
       })
       $(".topbarButton").click(function changePage(button) {
-        button = button.currentTarget
-        window.location.href = $(button).text().toLowerCase()
+        var buttonText = button.currentTarget.text().toLowerCase()
+        if (buttonText == "home") {
+          window.location.href = ""
+        } else {
+          window.location.href = buttonText
+        }
       })
       $(".commandButton").click(function changeCommandMenu(button) {
 
