Update already bruh

--- a/home.html
+++ b/home.html
@@ -9,6 +9,6 @@
         </script>
     </head>
     <body>
-        <p>If you are not redirected automatically, clicn on this <a href="https://lolspers.github.io/">link</a>.</p>
+        <p>If you are not redirected automatically, click on this <a href="https://lolspers.github.io/">link</a>.</p>
     </body>
 </html>
