--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
         <link href="style.css" rel="stylesheet">
         <script type="text/javascript">
             setTimeout(function() {
-                window.location.href = "";
+                window.location.href = "https://lolspers.github.io/";
             }, 0);
         </script>
     </head>
