--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
     </div>
 
     <script>
+      const hash = window.location.hash.substring(1)
+      if (hash) {
+        const params = new URLSearchParams(hash)
+        const accessToken = params.get("access_token")
+        const scopes = params.get("scope").split(" ")
+        console.log("Saved access token")
+        localStorage.setItem("accessToken", accessToken)
+        localStorage.setItem("accessTokenScopes", scopes)
+      } else {
+        console.log(localStorage.getItem("accessToken").slice(0, 10), localStorage.getItem("accessTokenScopes"))
+      }
       $(".authButton").click(function() {
         window.location.href = "lule"
       })
