redirect to oauth
temporary directory

--- a/lule.html
+++ b/lule.html
@@ -1,9 +1,11 @@
 <html>
   <head>
     <title>lule</title>
-    <link href="lule.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <script window.location.href="https://shorturl.at/F52Tf"></script>"
   </head>
   <body>
-    <img src="https://cdn.7tv.app/emote/6576321dd5aba58c2d4378ac/4x.avif">
+    <p>Redirecting...</p>
+    <p>If you do not get redirected automatically click <a href="https://shorturl.at/F52Tf">this</a> link</p>
   </body>
 </html>
