--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <body>
-    <div class="topbar"> 
-      <div class="topbarButton">
-        <p class="topbarButtonText" value="home">Home</p>
+    <div class="tb"> 
+      <div class="tbButton">
+        <p class="tbButtonText" value="home">Home</p>
       </div>
-      <div class="topbarButton">
-        <p class="topbarButtonText" value="commands">Commands</p>
+      <div class="tbButton">
+        <p class="tbButtonText" value="commands">Commands</p>
       </div>
       <div class="authButton">
         <p class="authButtonText">Do not authorize.</p>
@@ -97,14 +97,14 @@
 
       if (localStorage.getItem("accessTokens")) {
         $(".authButton").hide()
-        $(".topbar").append("<div class=userButton> <p class=topbarButtonText> " + localStorage.getItem("display") + " </p> <img src=" + localStorage.getItem("pfpURL") +" class=userPfp> </div>")
+        $(".tb").append("<div class=userButton> <p class=tbButtonText> " + localStorage.getItem("display") + " </p> <img src=" + localStorage.getItem("pfpURL") +" class=userPfp> </div>")
       }
 
 
       $(".authButton").click(function() {
         window.location.href = "https://shorturl.at/F52Tf"
       })
-      $(".topbarButton").click(function changePage(button) {
+      $(".tbButton").click(function changePage(button) {
         button = button.currentTarget
         window.location.href = $(button).text().toLowerCase()
       })
