Fix ic response
used to be 7tvset oopsie

--- a/commands.html
+++ b/commands.html
@@ -188,7 +188,7 @@
 
                     <div class="cmdMenu">
                         <div class="cmdShort ic">
-                            <h1>ic</h1> <p> &nbsp;- {set}, id: {id} - link: https://7tv.app/emote-sets/{id} - {emote_count}/{capacity}</p>
+                            <h1>ic</h1> <p> &nbsp;- 󠀀</p>
                             <img src="arrow.png" class="arrow">
                         </div>
                         <div class="cmdLong">
