remove testing stuff

--- a/commands.html
+++ b/commands.html
@@ -70,7 +70,7 @@
 
     </body>
     <script>
-        //$(".helpPopup").hide()
+        $(".helpPopup").hide()
 
         for (l in commands) {
             $(".sbButtons").append(`
