--- a/commands.html
+++ b/commands.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="src/commands.js"></script>
   </head>
   <body>
     <div class="tb"> 
@@ -100,24 +99,28 @@
 
     </body>
     <script src="src/main.js"></script>
-    <script>
-      login()
-      loadCommands()
-      commandSearch()
-      
+    <script type="module">
+      import { showHelpPopup, hideHelpPopup, loadCommands, commandSearch, showCategories, sortCommands } from "./src/commands.js"
+
       if (localStorage.getItem("visited")) {
           $(".helpPopup").hide()
       } else {
           showHelpPopup()
           localStorage.setItem("visited", true)
       }
-  
-      $(".themeSelect").click(changeTheme)
+
+      loadCommands()
+      commandSearch()
       $(".categorybutton").click(showCategories)
       $("#sort").change(sortCommands)
 
       $(document).ready(() => {
-        $("#sort").trigger("change")
+          $("#sort").trigger("change")
       })
+    </script>
+    <script>
+      login()
+
+      $(".themeSelect").click(changeTheme)
     </script>
 </html>
